fixing alignment

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
     height: auto;
     background-repeat: initial;
     background-size: cover;
-    max-height: 100%;
+    height: 500px;
 }
 
 /* header - heart icon */
@@ -79,7 +79,7 @@ body {
 /* main */
 .main-box {
     max-width: 800px;
-    height: 450px;
+    height: 85%;
     background-color: white;
     opacity: 0.9;
     text-align: center;
@@ -178,7 +178,7 @@ footer {
     left: 0;
     bottom: 0;
     right: 0;
-    font-size: 15px;
+    font-size: 13px;
     /* position: absolute; */
 /*     width: 100%;
     height: 40px; */
